[gd_scene load_steps=5 format=3 uid="uid://bvpntidioecs2"]

[ext_resource type="Script" path="res://addons/scene_palette/components/sub_palette.gd" id="1_refpc"]
[ext_resource type="Texture2D" uid="uid://bfg208jggp5oq" path="res://addons/scene_palette/icons/arrow-side.png" id="2_8xt6a"]
[ext_resource type="Texture2D" uid="uid://d2kroa0x3fffu" path="res://addons/scene_palette/icons/arrow-down.png" id="2_qvda1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_65kn4"]
bg_color = Color(0.129412, 0.14902, 0.180392, 1)
border_width_left = 2
border_width_top = 1
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.0575923, 0.0696738, 0.0890055, 1)

[node name="SubPalette" type="MarginContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 26.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2
script = ExtResource("1_refpc")
arrow_closed = ExtResource("2_8xt6a")
arrow_open = ExtResource("2_qvda1")

[node name="Panel" type="Panel" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_65kn4")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="SubPalette" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TitleMinimizeButton" type="Button" parent="MarginContainer/SubPalette"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0.764706, 0.741176, 0.776471, 1)
toggle_mode = true
text = "Subfolder name"
icon = ExtResource("2_qvda1")

[node name="ContentContainer" type="VBoxContainer" parent="MarginContainer/SubPalette"]
unique_name_in_owner = true
layout_mode = 2

[node name="SceneDropGridContainer" type="HFlowContainer" parent="MarginContainer/SubPalette/ContentContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="SubPaletteContainerContainer" type="MarginContainer" parent="MarginContainer/SubPalette/ContentContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10

[node name="SubPaletteContainer" type="VBoxContainer" parent="MarginContainer/SubPalette/ContentContainer/SubPaletteContainerContainer"]
unique_name_in_owner = true
layout_mode = 2

[connection signal="toggled" from="MarginContainer/SubPalette/TitleMinimizeButton" to="." method="_on_title_minimize_button_toggled"]
